--- a/cluster.yaml
+++ b/cluster.yaml
@@ -1,9 +1,14 @@
 apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
+availabilityZones:
+  - us-east-1a
+  - us-east-1b
+  - us-east-1c
+
 metadata:
   name: eks-upgrade-demo
-  region: us-west-2
+  region: us-east-1
   version: "1.23"
   
 iam:
